--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.3",
-  
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -21,7 +21,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.19",
-    "swiper": "^11.2.10"  
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
